// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> Match snapshot of component <App/> in initial mode 1`] = `
<div>
  <div
    class="guided-answer"
  >
    <div
      class="guided-answer__header"
      style="padding-bottom: 20px;"
    >
      <div
        class="guided-answer__header__sub"
      >
        <div
          class="guided-answer__header__logoAndTitle"
        >
          <span
            id="sap-logo"
          >
            <svg />
          </span>
          <h1
            class="guided-answer__header__title"
          >
            Guided Answers
          </h1>
        </div>
        <div
          class="guided-answer__header__searchField"
        >
          <div
            class="ms-SearchBox tree-search-field root-109"
          >
            <div
              aria-hidden="true"
              class="ms-SearchBox-iconContainer iconContainer-110"
            >
              <i
                aria-hidden="true"
                class="ms-SearchBox-icon icon-114"
                data-icon-name="Search"
              >
                <svg
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.5024,9.9999 C7.0214,9.9999 5.0024,7.9809 5.0024,5.4999 C5.0024,3.0189 7.0214,0.9999 9.5024,0.9999 C11.9834,0.9999 14.0024,3.0189 14.0024,5.4999 C14.0024,7.9809 11.9834,9.9999 9.5024,9.9999 M9.5024,-0.0001 C6.4704,-0.0001 4.0024,2.4679 4.0024,5.4999 C4.0024,6.9469 4.5684,8.2609 5.4854,9.2439 L0.0004,15.3309 L0.7434,16.0009 L6.2314,9.9109 C7.1474,10.5919 8.2764,10.9999 9.5024,10.9999 C12.5354,10.9999 15.0024,8.5319 15.0024,5.4999 C15.0024,2.4679 12.5354,-0.0001 9.5024,-0.0001"
                    fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                    fill-rule="evenodd"
                  />
                </svg>
              </i>
            </div>
            <input
              class="ms-SearchBox-field field-113"
              id="search-field"
              placeholder="Search Guided Answers"
              role="searchbox"
              value=""
            />
          </div>
          <div
            id="filters"
          >
            <button
              aria-disabled="true"
              class="ms-Button ms-Button--icon is-disabled filter-button root-115"
              data-is-focusable="false"
              disabled=""
              id="filter-products"
              title="Filter Products"
              type="button"
            >
              <span
                class="ms-Button-flexContainer flexContainer-116"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden="true"
                  class="ms-Icon root-101 ms-Button-icon icon-118"
                  data-icon-name="Table"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M1,16 C0.44771525,16 0,15.5522847 0,15 L0,1 C0,0.44771525 0.44771525,0 1,0 L15,0 C15.5522847,0 16,0.44771525 16,1 L16,15 C16,15.5522847 15.5522847,16 15,16 L1,16 Z M5,11 L1,11 L1,15 L5,15 L5,11 Z M10,11 L6,11 L6,15 L10,15 L10,11 Z M15,11 L11,11 L11,15 L15,15 L15,11 Z M5,6 L1,6 L1,10 L5,10 L5,6 Z M10,6 L6,6 L6,10 L10,10 L10,6 Z M15,6 L11,6 L11,10 L15,10 L15,6 Z M5,1 L1,1 L1,5 L5,5 L5,1 Z M6,1 L6,5 L10,5 L10,1 L6,1 Z M11,5 L15,5 L15,1 L11,1 L11,5 Z"
                      fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                    />
                  </svg>
                </i>
              </span>
            </button>
            <button
              aria-disabled="true"
              class="ms-Button ms-Button--icon is-disabled filter-button root-115"
              data-is-focusable="false"
              disabled=""
              id="filter-components"
              title="Filter Components"
              type="button"
            >
              <span
                class="ms-Button-flexContainer flexContainer-116"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden="true"
                  class="ms-Icon root-101 ms-Button-icon icon-118"
                  data-icon-name="IdTag"
                >
                  <svg
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M6 2C6 1.44772 6.44775 1 7 1H9C9.55225 1 10 1.44772 10 2V3.58578C10 3.85101 9.89465 4.10535 9.70715 4.29289L8.70715 5.29289C8.31653 5.68342 7.68347 5.68342 7.29285 5.29289L6.29285 4.29289C6.10535 4.10535 6 3.85101 6 3.58578V2ZM7 2.5C7 2.22385 7.22388 2 7.5 2H8.5C8.77612 2 9 2.22385 9 2.5C9 2.77615 8.77612 3 8.5 3H7.5C7.22388 3 7 2.77615 7 2.5Z"
                      fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                      fill-rule="evenodd"
                    />
                    <path
                      d="M5.04333 4H1C0.447754 4 0 4.44772 0 5V14C0 14.5523 0.447754 15 1 15H15C15.5522 15 16 14.5523 16 14V5C16 4.44772 15.5522 4 15 4H10.9567C10.8771 4.37594 10.6901 4.72412 10.4142 5H15V14H1V5H5.58582C5.30994 4.72412 5.12292 4.37594 5.04333 4Z"
                      fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M3 7C2.44775 7 2 7.44772 2 8V11C2 11.5523 2.44775 12 3 12H5C5.55225 12 6 11.5523 6 11V8C6 7.44772 5.55225 7 5 7H3ZM5 8H3V11H5V8Z"
                      fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                      fill-rule="evenodd"
                    />
                    <path
                      d="M7 7.5C7 7.22385 7.22388 7 7.5 7H13.5C13.7761 7 14 7.22385 14 7.5C14 7.77615 13.7761 8 13.5 8H7.5C7.22388 8 7 7.77615 7 7.5Z"
                      fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                    />
                    <path
                      d="M7 9.5C7 9.22385 7.22388 9 7.5 9H13.5C13.7761 9 14 9.22385 14 9.5C14 9.77615 13.7761 10 13.5 10H7.5C7.22388 10 7 9.77615 7 9.5Z"
                      fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                    />
                    <path
                      d="M11 11.5C11 11.2239 11.2239 11 11.5 11H13.5C13.7761 11 14 11.2239 14 11.5C14 11.7761 13.7761 12 13.5 12H11.5C11.2239 12 11 11.7761 11 11.5Z"
                      fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                    />
                  </svg>
                </i>
              </span>
            </button>
          </div>
        </div>
      </div>
       
    </div>
    <main
      class="guided-answer__container"
      id="results-container"
    />
  </div>
</div>
`;

exports[`<App /> Match snapshot of component <App/> in loading mode 1`] = `
<div>
  <div
    class="guided-answer"
  >
    <div
      class="guided-answer__header"
      style="padding-bottom: 20px;"
    >
      <div
        class="guided-answer__header__sub"
      >
        <div
          class="guided-answer__header__logoAndTitle"
        >
          <span
            id="sap-logo"
          >
            <svg />
          </span>
          <h1
            class="guided-answer__header__title"
          >
            Guided Answers
          </h1>
        </div>
        <div
          class="guided-answer__header__searchField"
        >
          <div
            class="ms-SearchBox tree-search-field root-109"
          >
            <div
              aria-hidden="true"
              class="ms-SearchBox-iconContainer iconContainer-110"
            >
              <i
                aria-hidden="true"
                class="ms-SearchBox-icon icon-114"
                data-icon-name="Search"
              >
                <svg
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.5024,9.9999 C7.0214,9.9999 5.0024,7.9809 5.0024,5.4999 C5.0024,3.0189 7.0214,0.9999 9.5024,0.9999 C11.9834,0.9999 14.0024,3.0189 14.0024,5.4999 C14.0024,7.9809 11.9834,9.9999 9.5024,9.9999 M9.5024,-0.0001 C6.4704,-0.0001 4.0024,2.4679 4.0024,5.4999 C4.0024,6.9469 4.5684,8.2609 5.4854,9.2439 L0.0004,15.3309 L0.7434,16.0009 L6.2314,9.9109 C7.1474,10.5919 8.2764,10.9999 9.5024,10.9999 C12.5354,10.9999 15.0024,8.5319 15.0024,5.4999 C15.0024,2.4679 12.5354,-0.0001 9.5024,-0.0001"
                    fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                    fill-rule="evenodd"
                  />
                </svg>
              </i>
            </div>
            <input
              class="ms-SearchBox-field field-113"
              id="search-field"
              placeholder="Search Guided Answers"
              readonly=""
              role="searchbox"
              value=""
            />
          </div>
          <div
            id="filters"
          >
            <button
              aria-disabled="true"
              class="ms-Button ms-Button--icon is-disabled filter-button root-115"
              data-is-focusable="false"
              disabled=""
              id="filter-products"
              title="Filter Products"
              type="button"
            >
              <span
                class="ms-Button-flexContainer flexContainer-116"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden="true"
                  class="ms-Icon root-101 ms-Button-icon icon-118"
                  data-icon-name="Table"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M1,16 C0.44771525,16 0,15.5522847 0,15 L0,1 C0,0.44771525 0.44771525,0 1,0 L15,0 C15.5522847,0 16,0.44771525 16,1 L16,15 C16,15.5522847 15.5522847,16 15,16 L1,16 Z M5,11 L1,11 L1,15 L5,15 L5,11 Z M10,11 L6,11 L6,15 L10,15 L10,11 Z M15,11 L11,11 L11,15 L15,15 L15,11 Z M5,6 L1,6 L1,10 L5,10 L5,6 Z M10,6 L6,6 L6,10 L10,10 L10,6 Z M15,6 L11,6 L11,10 L15,10 L15,6 Z M5,1 L1,1 L1,5 L5,5 L5,1 Z M6,1 L6,5 L10,5 L10,1 L6,1 Z M11,5 L15,5 L15,1 L11,1 L11,5 Z"
                      fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                    />
                  </svg>
                </i>
              </span>
            </button>
            <button
              aria-disabled="true"
              class="ms-Button ms-Button--icon is-disabled filter-button root-115"
              data-is-focusable="false"
              disabled=""
              id="filter-components"
              title="Filter Components"
              type="button"
            >
              <span
                class="ms-Button-flexContainer flexContainer-116"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden="true"
                  class="ms-Icon root-101 ms-Button-icon icon-118"
                  data-icon-name="IdTag"
                >
                  <svg
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M6 2C6 1.44772 6.44775 1 7 1H9C9.55225 1 10 1.44772 10 2V3.58578C10 3.85101 9.89465 4.10535 9.70715 4.29289L8.70715 5.29289C8.31653 5.68342 7.68347 5.68342 7.29285 5.29289L6.29285 4.29289C6.10535 4.10535 6 3.85101 6 3.58578V2ZM7 2.5C7 2.22385 7.22388 2 7.5 2H8.5C8.77612 2 9 2.22385 9 2.5C9 2.77615 8.77612 3 8.5 3H7.5C7.22388 3 7 2.77615 7 2.5Z"
                      fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                      fill-rule="evenodd"
                    />
                    <path
                      d="M5.04333 4H1C0.447754 4 0 4.44772 0 5V14C0 14.5523 0.447754 15 1 15H15C15.5522 15 16 14.5523 16 14V5C16 4.44772 15.5522 4 15 4H10.9567C10.8771 4.37594 10.6901 4.72412 10.4142 5H15V14H1V5H5.58582C5.30994 4.72412 5.12292 4.37594 5.04333 4Z"
                      fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M3 7C2.44775 7 2 7.44772 2 8V11C2 11.5523 2.44775 12 3 12H5C5.55225 12 6 11.5523 6 11V8C6 7.44772 5.55225 7 5 7H3ZM5 8H3V11H5V8Z"
                      fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                      fill-rule="evenodd"
                    />
                    <path
                      d="M7 7.5C7 7.22385 7.22388 7 7.5 7H13.5C13.7761 7 14 7.22385 14 7.5C14 7.77615 13.7761 8 13.5 8H7.5C7.22388 8 7 7.77615 7 7.5Z"
                      fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                    />
                    <path
                      d="M7 9.5C7 9.22385 7.22388 9 7.5 9H13.5C13.7761 9 14 9.22385 14 9.5C14 9.77615 13.7761 10 13.5 10H7.5C7.22388 10 7 9.77615 7 9.5Z"
                      fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                    />
                    <path
                      d="M11 11.5C11 11.2239 11.2239 11 11.5 11H13.5C13.7761 11 14 11.2239 14 11.5C14 11.7761 13.7761 12 13.5 12H11.5C11.2239 12 11 11.7761 11 11.5Z"
                      fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                    />
                  </svg>
                </i>
              </span>
            </button>
          </div>
        </div>
      </div>
       
    </div>
    <main
      class="guided-answer__container"
      id="results-container"
    >
      <div
        class="ms-Spinner root-131"
        id="loading-indicator"
      >
        <div
          class="ms-Spinner-circle ms-Spinner--large circle-132"
        />
      </div>
    </main>
  </div>
</div>
`;

exports[`<App /> Match snapshot of component <App/> with a guide selected 1`] = `
<div>
  <div
    class="guided-answer"
  >
    <div
      class="guided-answer__header"
      style="padding-bottom: 0px;"
    >
      <div
        class="ms-FocusZone css-137 guided-answer__header"
        data-focuszone-id="FocusZone25"
      >
        <div
          class="guided-answer__header__allAnswersButton"
        >
          <button
            class="guided-answer__header__navButtons home-icon"
            id="all-answers-button"
            tabindex="0"
            title="Home"
          >
            <svg
              class="guided-answer__header__navButtons__content"
              fill="currentColor"
              focusable="false"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 16 16"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M8.36 1.37l6.36 5.8-.71.71L13 6.964v6.526l-.5.5h-3l-.5-.5v-3.5H7v3.5l-.5.5h-3l-.5-.5V6.972L2 7.88l-.71-.71 6.35-5.8h.72zM4 6.063v6.927h2v-3.5l.5-.5h3l.5.5v3.5h2V6.057L8 2.43 4 6.063z"
                fill-rule="evenodd"
              />
            </svg>
             
            <span
              class="guided-answer__header__navButtons__content__text text-underline"
            >
              Home
            </span>
          </button>
        </div>
        <div
          class="guided-answer__header__back-restart-buttons"
        >
          <button
            class="guided-answer__header__navButtons"
            id="back-button"
            tabindex="-1"
            title="Step back"
          >
            <svg
              class="guided-answer__header__navButtons__content"
              fill="currentColor"
              focusable="false"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 16 16"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M7 3.093l-5 5V8.8l5 5 .707-.707-4.146-4.147H14v-1H3.56L7.708 3.8 7 3.093z"
                fill-rule="evenodd"
              />
            </svg>
            <span
              class="guided-answer__header__navButtons__content text-underline"
              style="margin-left: 3px;"
            >
              Step back
            </span>
          </button>
          <div
            class="guided-answer__header__restart-feedback-buttons"
          >
            <button
              class="guided-answer__header__navButtons"
              tabindex="-1"
              title="Feedback"
            >
              <i
                aria-hidden="true"
                class="ts-icon guided-answer__header__navButtons__content root-101"
                data-icon-name="ChatBubbles"
                style="padding-top: 2px;"
              >
                <svg
                  fill="none"
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 10H6V9H4.58578L3 10.5858V9H1V1H12V5H13V0H0V10H2V13L5 10Z"
                    fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M16 6V13H14V16L11 13H7V6H16ZM13 12V13.5858L11.4142 12H8V7H15V12H13Z"
                    fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                    fill-rule="evenodd"
                  />
                </svg>
              </i>
            </button>
            <div
              class="guided-answer__header__divider"
            />
            <div>
              <button
                class="ms-Button ms-Button--icon guided-answer__header__navButtons guided-answer__header__navButtons__content root-134"
                data-is-focusable="true"
                id="callout-test-id"
                tabindex="-1"
                title="Share this guide"
                type="button"
              >
                <span
                  class="ms-Button-flexContainer flexContainer-116"
                  data-automationid="splitbuttonprimary"
                >
                  <i
                    aria-hidden="true"
                    class="ms-Icon root-101 ms-Button-icon icon-135"
                    data-icon-name="Link"
                  >
                    <svg
                      fill="none"
                      focusable="false"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M7.82375 2.58623L10.4138 5.17625C11.3078 6.07027 11.3078 7.51976 10.4138 8.41378C9.51976 9.30779 8.07027 9.30779 7.17625 8.41378L6.55194 7.76627L5.90444 8.41378L6.52874 9.06128C7.78037 10.3129 9.80965 10.3129 11.0613 9.06128C12.3129 7.80966 12.3129 5.78037 11.0613 4.52874L8.47126 1.93872C7.21963 0.687093 5.19035 0.687093 3.93872 1.93872C2.68709 3.19035 2.68709 5.21963 3.93872 6.47126L4.58623 5.82375C3.69221 4.92973 3.69221 3.48024 4.58623 2.58623C5.48024 1.69221 6.92973 1.69221 7.82375 2.58623Z"
                        fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                      />
                      <path
                        d="M8.17625 13.4138L5.58622 10.8238C4.69221 9.92973 4.69221 8.48024 5.58622 7.58622C6.48024 6.69221 7.92973 6.69221 8.82375 7.58622L9.35249 8.14751L10 7.5L9.47126 6.93872C8.21963 5.68709 6.19034 5.68709 4.93872 6.93872C3.68709 8.19035 3.68709 10.2196 4.93872 11.4713L7.52874 14.0613C8.78037 15.3129 10.8097 15.3129 12.0613 14.0613C13.3129 12.8097 13.3129 10.7804 12.0613 9.52874L11.4138 10.1762C12.3078 11.0703 12.3078 12.5198 11.4138 13.4138C10.5198 14.3078 9.07027 14.3078 8.17625 13.4138Z"
                        fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                      />
                    </svg>
                  </i>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <main
      class="guided-answer__container"
      id="results-container"
    >
      <div
        class="ms-Spinner root-131"
        id="loading-indicator"
      >
        <div
          class="ms-Spinner-circle ms-Spinner--large circle-132"
        />
      </div>
    </main>
  </div>
</div>
`;

exports[`<App /> Match snapshot of component <App/> with results list 1`] = `
<div>
  <div
    class="guided-answer"
  >
    <div
      class="guided-answer__header"
      style="padding-bottom: 20px;"
    >
      <div
        class="guided-answer__header__sub"
      >
        <div
          class="guided-answer__header__logoAndTitle"
        >
          <span
            id="sap-logo"
          >
            <svg />
          </span>
          <h1
            class="guided-answer__header__title"
          >
            Guided Answers
          </h1>
        </div>
        <div
          class="guided-answer__header__searchField"
        >
          <div
            class="ms-SearchBox tree-search-field root-109"
          >
            <div
              aria-hidden="true"
              class="ms-SearchBox-iconContainer iconContainer-110"
            >
              <i
                aria-hidden="true"
                class="ms-SearchBox-icon icon-114"
                data-icon-name="Search"
              >
                <svg
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.5024,9.9999 C7.0214,9.9999 5.0024,7.9809 5.0024,5.4999 C5.0024,3.0189 7.0214,0.9999 9.5024,0.9999 C11.9834,0.9999 14.0024,3.0189 14.0024,5.4999 C14.0024,7.9809 11.9834,9.9999 9.5024,9.9999 M9.5024,-0.0001 C6.4704,-0.0001 4.0024,2.4679 4.0024,5.4999 C4.0024,6.9469 4.5684,8.2609 5.4854,9.2439 L0.0004,15.3309 L0.7434,16.0009 L6.2314,9.9109 C7.1474,10.5919 8.2764,10.9999 9.5024,10.9999 C12.5354,10.9999 15.0024,8.5319 15.0024,5.4999 C15.0024,2.4679 12.5354,-0.0001 9.5024,-0.0001"
                    fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                    fill-rule="evenodd"
                  />
                </svg>
              </i>
            </div>
            <input
              class="ms-SearchBox-field field-113"
              id="search-field"
              placeholder="Search Guided Answers"
              role="searchbox"
              value=""
            />
          </div>
          <div
            id="filters"
          >
            <button
              class="ms-Button ms-Button--icon filter-button root-134"
              data-is-focusable="true"
              id="filter-products"
              title="Filter Products"
              type="button"
            >
              <span
                class="ms-Button-flexContainer flexContainer-116"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden="true"
                  class="ms-Icon root-101 ms-Button-icon icon-135"
                  data-icon-name="Table"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M1,16 C0.44771525,16 0,15.5522847 0,15 L0,1 C0,0.44771525 0.44771525,0 1,0 L15,0 C15.5522847,0 16,0.44771525 16,1 L16,15 C16,15.5522847 15.5522847,16 15,16 L1,16 Z M5,11 L1,11 L1,15 L5,15 L5,11 Z M10,11 L6,11 L6,15 L10,15 L10,11 Z M15,11 L11,11 L11,15 L15,15 L15,11 Z M5,6 L1,6 L1,10 L5,10 L5,6 Z M10,6 L6,6 L6,10 L10,10 L10,6 Z M15,6 L11,6 L11,10 L15,10 L15,6 Z M5,1 L1,1 L1,5 L5,5 L5,1 Z M6,1 L6,5 L10,5 L10,1 L6,1 Z M11,5 L15,5 L15,1 L11,1 L11,5 Z"
                      fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                    />
                  </svg>
                </i>
              </span>
            </button>
            <button
              class="ms-Button ms-Button--icon filter-button root-134"
              data-is-focusable="true"
              id="filter-components"
              title="Filter Components"
              type="button"
            >
              <span
                class="ms-Button-flexContainer flexContainer-116"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden="true"
                  class="ms-Icon root-101 ms-Button-icon icon-135"
                  data-icon-name="IdTag"
                >
                  <svg
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M6 2C6 1.44772 6.44775 1 7 1H9C9.55225 1 10 1.44772 10 2V3.58578C10 3.85101 9.89465 4.10535 9.70715 4.29289L8.70715 5.29289C8.31653 5.68342 7.68347 5.68342 7.29285 5.29289L6.29285 4.29289C6.10535 4.10535 6 3.85101 6 3.58578V2ZM7 2.5C7 2.22385 7.22388 2 7.5 2H8.5C8.77612 2 9 2.22385 9 2.5C9 2.77615 8.77612 3 8.5 3H7.5C7.22388 3 7 2.77615 7 2.5Z"
                      fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                      fill-rule="evenodd"
                    />
                    <path
                      d="M5.04333 4H1C0.447754 4 0 4.44772 0 5V14C0 14.5523 0.447754 15 1 15H15C15.5522 15 16 14.5523 16 14V5C16 4.44772 15.5522 4 15 4H10.9567C10.8771 4.37594 10.6901 4.72412 10.4142 5H15V14H1V5H5.58582C5.30994 4.72412 5.12292 4.37594 5.04333 4Z"
                      fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M3 7C2.44775 7 2 7.44772 2 8V11C2 11.5523 2.44775 12 3 12H5C5.55225 12 6 11.5523 6 11V8C6 7.44772 5.55225 7 5 7H3ZM5 8H3V11H5V8Z"
                      fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                      fill-rule="evenodd"
                    />
                    <path
                      d="M7 7.5C7 7.22385 7.22388 7 7.5 7H13.5C13.7761 7 14 7.22385 14 7.5C14 7.77615 13.7761 8 13.5 8H7.5C7.22388 8 7 7.77615 7 7.5Z"
                      fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                    />
                    <path
                      d="M7 9.5C7 9.22385 7.22388 9 7.5 9H13.5C13.7761 9 14 9.22385 14 9.5C14 9.77615 13.7761 10 13.5 10H7.5C7.22388 10 7 9.77615 7 9.5Z"
                      fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                    />
                    <path
                      d="M11 11.5C11 11.2239 11.2239 11 11.5 11H13.5C13.7761 11 14 11.2239 14 11.5C14 11.7761 13.7761 12 13.5 12H11.5C11.2239 12 11 11.7761 11 11.5Z"
                      fill="var(--vscode-icon-foreground, var(--vscode-foreground))"
                    />
                  </svg>
                </i>
              </span>
            </button>
          </div>
        </div>
      </div>
       
    </div>
    <main
      class="guided-answer__container"
      id="results-container"
    >
      <div
        class="ms-FocusZone css-137"
        data-focuszone-id="FocusZone24"
      >
        <ul
          class="striped-list"
          role="listbox"
        >
          <div
            class="infinite-scroll-component__outerdiv"
          >
            <div
              class="infinite-scroll-component "
              style="height: auto; overflow: auto;"
            >
              <li
                class="tree-item"
                role="option"
              >
                <button
                  class="guided-answer__tree"
                  tabindex="0"
                >
                  <div
                    class="guided-answer__tree__ul"
                  >
                    <h3
                      class="guided-answer__tree__title"
                    >
                      SAP Fiori tools
                    </h3>
                    <div
                      class="bottom-section"
                    >
                      <span
                        class="guided-answer__tree__desc"
                      >
                        This is a troubleshooting guide to solve the issues while using SAP Fiori tools
                      </span>
                      <div
                        class="component-and-product-container"
                        style="margin-top: 10px;"
                      >
                        <div
                          class="guided-answer__tree__product"
                        >
                          <span
                            class="bottom-title"
                          >
                            Product: 
                          </span>
                          Product A
                        </div>
                        <div
                          class="guided-answer__tree__component"
                        >
                          <span
                            class="bottom-title"
                          >
                            Component: 
                          </span>
                          comp-a
                        </div>
                      </div>
                    </div>
                  </div>
                </button>
              </li>
            </div>
          </div>
        </ul>
      </div>
    </main>
  </div>
</div>
`;
